# cli-analysis

./: Cargo.toml
src/: cli.rs  config.rs  error.rs  main.rs  model.rs  rpc.rs
