[package]
name = "solana-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.2"      # Solana RPC Client
clap = "4.0"              # For CLI argument parsing
tokio = { version = "1.0", features = ["full"] } # Async support
serde = { version = "1.0", features = ["derive"] } # JSON parsing
serde_json = "1.0"